# licence

./: .gitignore  environment_language_bnf.txt  headers.txt  instructions.xlsx  language-specs.txt  new_arch_cpu.txt  readme.md
assembler/: assembler.cpp  push.hra  test.hra
component-description/: and-led.desc
demo/: demo.rom  phiarchsim  pwm_test.ndl  ssd-test.ndl  tiny_playground.ndl
examples/: demo-fancy.hra  demo.hra  fibbonaci.hra  main.hra  poll.hra  present.hra  render.hra
experimentation/: contiguous_allocator.cpp  contiguous_allocator.h  main.cpp
pseudocode/: graph_analysis.txt  node.txt
simulator/: CMakeLists.txt  compile.bat  compile.sh  cpu-demo.ndl  cpu-ssg.ndl  example.ndl  json.hpp  main.cpp  ret.json  tiny_playground.ndl  translator-test.ndl
simulator/lib/: json.hpp  parser.cc  parser.hh  scanner.cc
simulator/sim/: basic_input.cpp  basic_input.h  basic_io.h  basic_output.cpp  basic_output.h  environment.cpp  environment.h  environment_generator.cpp  environment_generator.h  evaluable.h  evaluation_list.cpp  evaluation_list.h  level_promise.cpp  level_promise.h  master_clk.cpp  master_clk.h  monitored.cpp  monitored.h  transpiler.cpp  transpiler.h  triggering.cpp  triggering.h
simulator/sim/gui/: bootloader.cpp  bootloader.h  cpu_monitor.cpp  cpu_monitor.h  mem_monitor.cpp  mem_monitor.h  sim_monitor.cpp  sim_monitor.h  ssd_monitor.cpp  ssd_monitor.h
simulator/sim/objs/: and_module.cpp  and_module.h  basic_int.cpp  basic_int.h  bit.cpp  bit.h  bit_array.cpp  bit_array.h  bootloader.cpp  bootloader.h  button.cpp  button.h  byte.cpp  byte.h  cpu.cpp  cpu.h  decoder.cpp  decoder.h  inout.cpp  inout.h  led.cpp  led.h  memory.cpp  memory.h  microcontroller.cpp  microcontroller.h  module.cpp  module.h  mux2x1.cpp  mux2x1.h  mux4x1.cpp  mux4x1.h  none.h  not_module.cpp  not_module.h  or_module.cpp  or_module.h  pwm_generator.cpp  pwm_generator.h  seven_seg.cpp  (+13 more)
simulator/sim/test/: memory_test.cpp  memory_test.h
syntax/: lex.l  logic.y
transpiler-bison/: makefile  parser.yy  scanner.ll
